// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChoiceInput> renders ChoiceInput correctly when passing options with ID 1`] = `
<div
  className="row af-form__group"
>
  <div
    className="col-md-2"
  >
    <label
      className="af-form__group-label"
      htmlFor="xxx_Yes"
    >
      Some label
    </label>
  </div>
  <div
    className="col-md-10"
  >
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_Yes"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="true"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_Yes"
      >
        <span
          className="af-form__description"
        >
          Yes
        </span>
      </label>
    </div>
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_No"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="false"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_No"
      >
        <span
          className="af-form__description"
        >
          No
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<ChoiceInput> renders ChoiceInput correctly when passing options without ID 1`] = `
<div
  className="row af-form__group"
>
  <div
    className="col-md-2"
  >
    <label
      className="af-form__group-label"
      htmlFor="xxx_0"
    >
      Some label
    </label>
  </div>
  <div
    className="col-md-10"
  >
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_0"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="true"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_0"
      >
        <span
          className="af-form__description"
        >
          Yes
        </span>
      </label>
    </div>
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_1"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="false"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_1"
      >
        <span
          className="af-form__description"
        >
          No
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<ChoiceInput> renders ChoiceInput correctly with default options 1`] = `
<div
  className="row af-form__group"
>
  <div
    className="col-md-2"
  >
    <label
      className="af-form__group-label"
      htmlFor="xxx_0"
    >
      Some label
    </label>
  </div>
  <div
    className="col-md-10"
  >
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_0"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="true"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_0"
      >
        <span
          className="af-form__description"
        >
          Oui
        </span>
      </label>
    </div>
    <div
      className="af-form__radio-custom"
    >
      <input
        autoFocus={null}
        checked={false}
        className="af-form__input-radio"
        componentClassName="af-form__radio-custom"
        disabled={false}
        id="xxx_1"
        name="xxx"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        tabIndex={null}
        type="radio"
        value="false"
      />
      <label
        className="af-form__label"
        htmlFor="xxx_1"
      >
        <span
          className="af-form__description"
        >
          Non
        </span>
      </label>
    </div>
  </div>
</div>
`;
